Fixed tab button spacing and moved remove button to list
Conflicts:

	browser/devtools/app-manager/content/index.css
	browser/devtools/app-manager/content/projects.xhtml

--- a/browser/devtools/app-manager/content/index.css
+++ b/browser/devtools/app-manager/content/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   -moz-box-sizing: border-box;
+  font-family: Lucida Grande, Helvetica, Helvetica Neue, sans-serif;
 }
 
 #tabs {
@@ -20,8 +21,8 @@
   color: white;
   cursor: pointer;
   text-align: center;
-  padding-top: 70px;
-  padding-bottom: 10px;
+  -moz-box-align: end;  
+  font-size: 10px;
   text-shadow: 0 1px 2px #111;
   color: #9FA6AD;
 }
@@ -45,19 +46,18 @@
 }
 
 .projects-button {
-  background-image: url('chrome://browser/skin/devtools/index-icons.svg');
-  background-repat: no-repeat;
-  background-position: left 0px;
+  background: url('chrome://browser/skin/devtools/index-icons.svg') no-repeat;
+  background-position: left -5px;
 
 }
 
 .projects-button[selected] {
-  background-position: right 0px;
+  background-position: right -5px;
 }
 
 .device-button {
   background-image: url('chrome://browser/skin/devtools/index-icons.svg'), linear-gradient(to bottom, transparent, #FF4800, transparent);
-  background-position: left -80px, top left;
+  background-position: left -85px, top left;
   background-repeat: no-repeat, no-repeat;
   background-size: 160px 160px, 1px 80px;
 }
@@ -68,7 +68,7 @@
 }
 
 .device-button[selected] {
-  background-position: right -80px, top left;
+  background-position: right -85px, top left;
 }
 
 #connection-footer {
